fix edit/delete/add buttons

--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,5 @@ DB_HOST=localhost
 USER=admin
 DB_PASSWORD="y)6@K-m5]U!*v1Yr"
 DB_DBNAME=system_db
+DB_TIMEZONE='utc'
 SECRET_KEY = "lQJoGiEYzW9YvWp"
